--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "gmailcount"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Julian Andrews <jandrews271@gmail.com>"]
-license = "MIT"
+license = "BSD-3-Clause"
 keywords = ["gmail", "cli", "statusbar"]
 repository = "https://github.com/julianandrews/gmailcount/"
 readme = "README.md"
@@ -16,3 +16,11 @@ keyring = "1.1.2"
 minidom = "0.14.0"
 reqwest = { version = "0.11.9", features = ["blocking"] }
 rpassword = "5.0"
+
+[package.metadata.deb]
+extended-description = """\
+gmailcount is a simple tool to count the number of emails in your gmail \
+inbox. It's primary purpose is to allow status-bar programs like xmobar or \
+i3bar to poll your inbox without the need to store your password in \
+plaintext."""
+license-file = ["LICENSE", "0"]
